# Agentic-Dynamic-Evasion-Attack-Remediation

./: .gitignore  README.md  agent_patch.py  agentic_stream.py  app.py  baseline_metrics_v2.json  baseline_model.py  eval_baseline.py  keep_alive.yml  logistic_baseline.py  logistic_metrics.json  logs.json  pyproject.toml  requirements.txt  static_logs_v2.json  tree_rules.txt
frontend/: index.html  package-lock.json
frontend/public/: baseline_metrics_v2.json  logistic_metrics.json  specialists.json
frontend/src/: App.css  App.tsx  index.css
