[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crewai[google-genai]>=1.14.2",
    "duckdb>=1.5.2",
    "ipykernel>=7.2.0",
    "joblib>=1.5.3",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.1.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pyarrow>=23.0.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "streamlit>=1.56.0",
    "xgboost>=3.2.0",
]
